--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,51 @@ proguard/
 *.log
 
 *.iml
+
+*.iml
+
+.idea/workspace.xml
+
+.idea/vcs.xml
+
+.idea/runConfigurations.xml
+
+.idea/modules.xml
+
+.idea/misc.xml
+
+.idea/libraries/support_v4_23_0_1.xml
+
+.idea/libraries/support_annotations_23_0_1.xml
+
+.idea/libraries/recyclerview_v7_23_0_1.xml
+
+.idea/libraries/palette_v7_23_0_1.xml
+
+.idea/libraries/okio_1_2_0.xml
+
+.idea/libraries/okhttp_urlconnection_2_2_0.xml
+
+.idea/libraries/okhttp_2_2_0.xml
+
+.idea/libraries/glide_3_6_0.xml
+
+.idea/libraries/design_23_0_1.xml
+
+.idea/libraries/circleimageview_1_3_0.xml
+
+.idea/libraries/cardview_v7_23_0_1.xml
+
+.idea/libraries/appcompat_v7_23_0_1.xml
+
+.idea/gradle.xml
+
+.idea/copyright/profiles_settings.xml
+
+.idea/compiler.xml
+
+.idea/.name
+
+android-historian.iml
+
+app/app.iml
