Update Support Version, Vector Example, Bottom Sheet Example
Simple examples using the latest support lib features which include
Bottom sheets, and Vector icons.

Also added sample circle.yml file in hopes to get manual config running
the build.

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,23 @@ app/app.iml
 .idea/libraries/support_annotations_23_1_1.xml
 
 .idea/libraries/support_v4_23_1_1.xml
+
+.idea/libraries/animated_vector_drawable_23_2_1.xml
+
+.idea/libraries/appcompat_v7_23_2_1.xml
+
+.idea/libraries/cardview_v7_23_2_1.xml
+
+.idea/libraries/design_23_2_1.xml
+
+.idea/libraries/palette_v7_23_2_1.xml
+
+.idea/libraries/percent_23_2_1.xml
+
+.idea/libraries/recyclerview_v7_23_2_1.xml
+
+.idea/libraries/support_annotations_23_2_1.xml
+
+.idea/libraries/support_v4_23_2_1.xml
+
+.idea/libraries/support_vector_drawable_23_2_1.xml
