Another circle config file to get CI running
Another try to get the build running

--- a/circle.yml
+++ b/circle.yml
@@ -2,10 +2,19 @@
 # Build configuration for Circle CI
 #
 
+general:
+    artifacts:
+        - /home/ubuntu/android-historian/app/build/outputs/apk/
+
 machine:
-   environment:
-     ANDROID_HOME: /usr/local/android-sdk-linux
+    environment:
+        ANDROID_HOME: /usr/local/android-sdk-linux
+
+dependencies:
+    override:
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
-  override:
-    - ./gradlew assembleDebug
+    override:
+        - (./gradlew assemble):
