Keep trying to fix CI
This?!

--- a/circle.yml
+++ b/circle.yml
@@ -14,3 +14,8 @@ dependencies:
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+
+test:
+  override:
+    - ./gradlew assembleRelease
+    - cp -r android-historian/build/outputs $CIRCLE_ARTIFACTS
