Try another YML file
Does this fix circle?

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 #
 # Build configuration for Circle CI
 #
+pre:
+- wget "https\://services.gradle.org/distributions/gradle-2.10-all.zip"; unzip gradle-2.10-all.zip
+
 
 general:
     artifacts:
