--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ machine:
 
 dependencies:
   pre:
-    - wget "https://services.gradle.org/distributions/gradle-2.10-bin.zip"; unzip gradle-2.10-bin.zip
+    - wget "https://services.gradle.org/distributions/gradle-2.10-jar.zip"; unzip gradle-2.10-jar.zip
     - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-23
     - echo y | android update sdk --no-ui --all --filter build-tools-23.0.2
 
