--- a/circle.yml
+++ b/circle.yml
@@ -1,25 +1,33 @@
-#
-# Build configuration for Circle CI
-#
-
-general:
-    artifacts:
-        - /home/ubuntu/android-historian/app/build/outputs/apk/
-
 machine:
-  environment:
-    PATH: "~/$CIRCLE_PROJECT_REPONAME/gradle-2.10/bin:$PATH"
-    TERM: "dumb"
-    ADB_INSTALL_TIMEOUT: "10"
-    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+    environment:
 
 dependencies:
-  pre:
-    - wget "https://services.gradle.org/distributions/gradle-2.10-jar.zip"; unzip gradle-2.10-jar.zip
-    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-23
-    - echo y | android update sdk --no-ui --all --filter build-tools-23.0.2
+override:
+- echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+- chmod +x gradlew
+- ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
-  override:
-    - ./gradlew assembleRelease
-    - cp -r android-historian/build/outputs $CIRCLE_ARTIFACTS
+    override:
+        #assemble the apk if tests were successful
+        - ./gradlew clean assembleDebug -PdisablePreDex
+#        # start the emulator
+        #run jvm unit tests
+        - ./gradlew test -PdisablePreDex
+        - emulator -avd circleci-android21 -no-audio -no-window:
+           background: true
+           parallel: true
+        # wait for it to have booted
+        - circle-android wait-for-boot
+        - adb shell input keyevent 82
+        # run tests  against the emulator.
+        - ./gradlew connectedDebugAndroidTest
+        - cp -r app/build/outputs/androidTest-results $CIRCLE_TEST_REPORTS
+        # copy the test results to the test results directory.
+        - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+        - cp -r app/build/test-results $CIRCLE_TEST_REPORTS
+        - cp -r app/build/reports $CIRCLE_TEST_REPORTS
+
+deployment:
+    continous:
+      branch: master
