--- a/circle.yml
+++ b/circle.yml
@@ -8,26 +8,20 @@ override:
 - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
-    override:
-        #assemble the apk if tests were successful
-        - ./gradlew clean assembleDebug -PdisablePreDex
-#        # start the emulator
-        #run jvm unit tests
-        - ./gradlew test -PdisablePreDex
-        - emulator -avd circleci-android21 -no-audio -no-window:
-           background: true
-           parallel: true
-        # wait for it to have booted
-        - circle-android wait-for-boot
-        - adb shell input keyevent 82
-        # run tests  against the emulator.
-        - ./gradlew connectedDebugAndroidTest
-        - cp -r app/build/outputs/androidTest-results $CIRCLE_TEST_REPORTS
-        # copy the test results to the test results directory.
-        - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-        - cp -r app/build/test-results $CIRCLE_TEST_REPORTS
-        - cp -r app/build/reports $CIRCLE_TEST_REPORTS
+  override:
+    - ./gradlew assembleRelease
+    - cp -r project-name/build/outputs $CIRCLE_ARTIFACTS
 
 deployment:
-    continous:
-      branch: master
+  production: prodLabel
+    branch: master
+    commands:
+      - ./gradlew publishApkRelease
+        -Dorg.gradle.project.track=production
+  beta:
+    branch: develop
+    commands:
+      - ./gradlew publishApkRelease
+        -Dorg.gradle.project.track=beta
+
+Sample circle.yml
