Updates to current library versions
This updates the versions, and also refactors to remove a vector I was
using incorrectly.

--- a/.gitignore
+++ b/.gitignore
@@ -25,88 +25,12 @@ proguard/
 
 *.iml
 
-.idea/workspace.xml
+.idea/libraries/*
 
-.idea/vcs.xml
-
-.idea/runConfigurations.xml
-
-.idea/modules.xml
-
-.idea/misc.xml
-
-.idea/libraries/support_v4_23_0_1.xml
-
-.idea/libraries/support_annotations_23_0_1.xml
-
-.idea/libraries/recyclerview_v7_23_0_1.xml
-
-.idea/libraries/palette_v7_23_0_1.xml
-
-.idea/libraries/okio_1_2_0.xml
-
-.idea/libraries/okhttp_urlconnection_2_2_0.xml
-
-.idea/libraries/okhttp_2_2_0.xml
-
-.idea/libraries/glide_3_6_0.xml
-
-.idea/libraries/design_23_0_1.xml
-
-.idea/libraries/circleimageview_1_3_0.xml
-
-.idea/libraries/cardview_v7_23_0_1.xml
-
-.idea/libraries/appcompat_v7_23_0_1.xml
-
-.idea/gradle.xml
-
-.idea/copyright/profiles_settings.xml
-
-.idea/compiler.xml
-
-.idea/.name
+.idea/*
 
 android-historian.iml
 
 app/app.iml
 
-.idea/encodings.xml
-
-.idea/libraries/appcompat_v7_23_1_1.xml
-
-.idea/libraries/cardview_v7_23_1_1.xml
-
-.idea/libraries/design_23_1_1.xml
-
-.idea/libraries/mockable_android_23.xml
-
-.idea/libraries/palette_v7_23_1_1.xml
-
-.idea/libraries/percent_23_1_1.xml
-
-.idea/libraries/recyclerview_v7_23_1_1.xml
-
-.idea/libraries/support_annotations_23_1_1.xml
-
-.idea/libraries/support_v4_23_1_1.xml
-
-.idea/libraries/animated_vector_drawable_23_2_1.xml
-
-.idea/libraries/appcompat_v7_23_2_1.xml
-
-.idea/libraries/cardview_v7_23_2_1.xml
-
-.idea/libraries/design_23_2_1.xml
-
-.idea/libraries/palette_v7_23_2_1.xml
-
-.idea/libraries/percent_23_2_1.xml
-
-.idea/libraries/recyclerview_v7_23_2_1.xml
-
-.idea/libraries/support_annotations_23_2_1.xml
-
-.idea/libraries/support_v4_23_2_1.xml
-
-.idea/libraries/support_vector_drawable_23_2_1.xml
+.gradle/**
