--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 'android-P'
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.support.android.designlibdemo"
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
 
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -27,19 +27,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:palette-v7:27.1.1'
-    implementation 'com.android.support:percent:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation 'androidx.cardview:cardview:1.0.0-alpha1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
+    implementation 'androidx.palette:palette:1.0.0-alpha1'
+    implementation 'androidx.percentlayout:percentlayout:1.0.0-alpha1'
 
     implementation 'com.github.bumptech.glide:glide:3.6.0'
 
     implementation 'com.squareup.okio:okio:1.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
-    implementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-    implementation 'com.android.support.test:runner:0.5'
-    implementation 'com.android.support.test.espresso:espresso-contrib:2.2.2'
+    implementation 'androidx.test.espresso:espresso-core:3.1.0-alpha2'
+    implementation 'androidx.test:runner:1.1.0-alpha2'
+    implementation 'androidx.test.espresso:espresso-contrib:3.1.0-alpha2'
 }
