--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.DesignDemo" >
+        android:theme="@style/Base.Theme.DesignDemo" >
         <activity android:name="com.designdemo.uaha.ui.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
