--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,14 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$jetpackVersion"
     implementation "androidx.palette:palette:$jetpackVersion"
     implementation "androidx.percentlayout:percentlayout:$jetpackVersion"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
 
     implementation 'com.github.bumptech.glide:glide:3.6.0'
 
     implementation 'com.squareup.okio:okio:1.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha2'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha2'
