--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.support.android.designlibdemo" >
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,8 +9,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Base.Theme.DesignDemo" >
-        <activity android:name="com.designdemo.uaha.ui.MainActivity" >
+        android:theme="@style/Base.Theme.DesignDemo"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.designdemo.uaha.ui.MainActivity"
+            android:launchMode="singleTop" >
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,10 +24,16 @@
         </activity>
         <activity
             android:name="com.designdemo.uaha.ui.DetailActivity"
-            android:parentActivityName="com.designdemo.uaha.ui.MainActivity" >
+            android:parentActivityName="com.designdemo.uaha.ui.MainActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.designdemo.uaha.ui.MainActivity" />
+            <meta-data android:name="android.app.default_searchable"
+                android:value=".SearchableActivity" />
         </activity>
         <activity
             android:name="com.designdemo.uaha.ui.UserActivity"
