Implement Custom Fonts
This implements downloadable fonts.  In this case, I am adding the "Bitter" font, which is set to be used for the Headline6 text style universally.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name="com.designdemo.uaha.ui.UserActivity"
             android:label="@string/title_activity_user" >
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
