--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 'android-P'
@@ -46,8 +48,11 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
 
 
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-alpha1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha2'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha2'
     androidTestImplementation 'androidx.test:rules:1.1.0-alpha2'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0-alpha2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
