--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.support.android.designlibdemo" >
+    package="com.support.android.designlibdemo">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,10 +11,13 @@
         android:label="@string/app_name"
         android:theme="@style/Base.Theme.DesignDemo"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.designdemo.uaha.ui.MainActivity"
-            android:launchMode="singleTop" >
-            <meta-data android:name="android.app.searchable"
+        <activity
+            android:name="com.designdemo.uaha.ui.MainActivity"
+            android:launchMode="singleTop">
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,25 +27,30 @@
         </activity>
         <activity
             android:name="com.designdemo.uaha.ui.DetailActivity"
-            android:parentActivityName="com.designdemo.uaha.ui.MainActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:parentActivityName="com.designdemo.uaha.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.designdemo.uaha.ui.MainActivity" />
-            <meta-data android:name="android.app.default_searchable"
+            <meta-data
+                android:name="android.app.default_searchable"
                 android:value=".SearchableActivity" />
         </activity>
         <activity
             android:name="com.designdemo.uaha.ui.UserActivity"
-            android:label="@string/title_activity_user" >
-        </activity>
+            android:label="@string/title_activity_user"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity
+            android:name=".BottomNavActivity"
+            android:label="@string/title_activity_bottom_bav"></activity>
     </application>
 
 </manifest>
