Adjustments to ItemDecoration
Using the BNR library for grid dividers, and remove custom code I was using before (but didn't really like).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation "androidx.palette:palette:$jetpackVersion"
     implementation "androidx.percentlayout:percentlayout:$jetpackVersion"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-alpha1'
 
     implementation 'com.github.bumptech.glide:glide:3.6.0'
 
@@ -47,9 +49,8 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
 
+    implementation 'com.bignerdranch.android:simple-item-decoration:1.0.0'
 
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-alpha1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha2'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha2'
     androidTestImplementation 'androidx.test:rules:1.1.0-alpha2'
