--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_adaptive_launcher"
         android:label="@string/app_name"
         android:theme="@style/Base.Theme.DesignDemo"
         tools:ignore="GoogleAppIndexingWarning">
