--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@
 # org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
+# https://github.com/shakee93/fonoapi  -or- https://fonoapi.freshpixl.com/
+fono.apikey=Your_Fono_API_Key
