--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ build/intermediates/dex-cache/cache.xml
 .gradle/vcsWorkingDirs/gc.properties
 .gradle/buildOutputCleanup/cache.properties
 .gradle/buildOutputCleanup/cache.properties
+gradle.properties
