Update Demo Gif
This is adding a new demo, which has the updated UI

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ build/intermediates/dex-cache/cache.xml
 .gradle/buildOutputCleanup/cache.properties
 gradle.properties
 gradle.properties
+gradle.properties
