More Kotlin Migrations, and Color adjustments
- Changed color theme of app to get rid of Yellow accent (and also find a more unique and pleasing color Palette).

- More Kotlin conversions (super close to being 100% K - yeah!)

- Adjusted adaptive icon to match newer color theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name=".BottomNavActivity"
+            android:name="com.designdemo.uaha.ui.BottomNavActivity"
             android:label="@string/title_activity_bottom_bav"></activity>
     </application>
 
