--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.support.android.designlibdemo"
@@ -42,9 +42,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$jetpackVersion"
     implementation "androidx.palette:palette:$jetpackVersion"
     implementation "androidx.percentlayout:percentlayout:$jetpackVersion"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-alpha1'
+    implementation "androidx.vectordrawable:vectordrawable:$jetpackVersion"
+    implementation "com.google.android.material:material:$jetpackVersion"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
     implementation 'com.github.bumptech.glide:glide:3.6.0'
 
