--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,14 +36,19 @@ repositories {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$jetpackVersion"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation "androidx.legacy:legacy-support-v4:$jetpackVersion"
-    implementation "com.google.android.material:material:$jetpackVersion"
     implementation "androidx.recyclerview:recyclerview:$jetpackVersion"
     implementation "androidx.palette:palette:$jetpackVersion"
     implementation "androidx.percentlayout:percentlayout:$jetpackVersion"
-    implementation "androidx.vectordrawable:vectordrawable:$jetpackVersion"
-    implementation "com.google.android.material:material:$jetpackVersion"
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+
+    implementation "android.arch.lifecycle:extensions:$archComponentsVersion"
+    implementation "android.arch.persistence.room:runtime:$archComponentsVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$archComponentsVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$archComponentsVersion"
+
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
     implementation 'com.github.bumptech.glide:glide:3.6.0'
