Various Changes required to prepare for updating to MDC alpha libraries
Make modifications required when I temporarily updated the project.  I reverted the dependency, but these changes will be needed when the library is updated.

Added OWASP dependency check Plugin

Tons of Lint corrections based on inspection results

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:label="@string/title_activity_bottom_bav" />
         <activity
             android:name="com.designdemo.uaha.ui.MotionLayoutActivity"
-            android:label="@string/title_activity_motion_layout"></activity>
+            android:label="@string/title_activity_motion_layout"/>
     </application>
 
 </manifest>
