--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.60'
+    ext.kotlin_version = '1.2.71'
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.owasp:dependency-check-gradle:4.0.0'
     }
 }
+
+// run the dependency check plugin: ./gradlew dependencyCheckAnalyze
+apply plugin: 'org.owasp.dependencycheck'
 
 allprojects {
     repositories {
