--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,20 +50,20 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
-    implementation 'com.github.bumptech.glide:glide:3.6.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation 'com.squareup.okio:okio:1.2.0'
-    implementation 'com.squareup.okhttp:okhttp:2.2.0'
+    implementation 'com.squareup.okio:okio:1.14.0'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     implementation 'com.bignerdranch.android:simple-item-decoration:1.0.0'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha2'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha2'
-    androidTestImplementation 'androidx.test:rules:1.1.0-alpha2'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0-alpha2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
