Initial checkin WorkManager
This has the initial notification functionality, being set to show about every 15 minutes.  Uses the new WorkManager to set this.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$jetpackVersion"
     implementation "androidx.palette:palette:$jetpackVersion"
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation "android.arch.work:work-runtime-ktx:$workManager"
 
     //ConstraintLayout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
