Notifications (showing WorkManager), and a branded splash screen
- Add a splash screen when the app launches
- WorkManager example using Periodic scheduled action to send a notification at every 15 minutes (shortest interval possible)
- Displaying Version info inside the App

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ gradle.properties
 .gradle/buildOutputCleanup/cache.properties
 .gradle/buildOutputCleanup/cache.properties
 .gradle/buildOutputCleanup/cache.properties
+app/release/output.json
