--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,10 @@ android {
         applicationId "com.ableandroid.historian"
         minSdkVersion 14
         targetSdkVersion 28
+        multiDexEnabled true
 
-        versionCode 8
-        versionName "1.0.8"
+        versionCode 9
+        versionName "1.0.9"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
@@ -43,45 +44,64 @@ repositories {
 }
 
 dependencies {
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    //Material UI
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
     implementation "androidx.legacy:legacy-support-v4:$jetpackVersion"
     implementation "androidx.recyclerview:recyclerview:$jetpackVersion"
     implementation "androidx.palette:palette:$jetpackVersion"
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation "android.arch.work:work-runtime-ktx:$workManager"
+
+    //WorkManager
+    implementation("androidx.work:work-runtime:$workManager"){
+        exclude group: 'com.google.guava', module: 'listenablefuture'
+    }
+    implementation ("androidx.work:work-runtime-ktx:$workManager"){
+        exclude group: 'com.google.guava', module: 'listenablefuture'
+    }
+    kapt "androidx.work:work-runtime-ktx:$workManager"
+    implementation "androidx.work:work-rxjava2:$workManager"
+    androidTestImplementation "androidx.work:work-testing:$workManager"
 
     //ConstraintLayout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
     //Lifecycle Components
-    implementation "android.arch.lifecycle:extensions:$archComponentsVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$archComponentsVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$archComponentsVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$archComponentsVersion"
 
     // Room components
-    implementation "android.arch.persistence.room:runtime:$roomVersion"
-    kapt "android.arch.persistence.room:compiler:$roomVersion"
-    androidTestImplementation "android.arch.persistence.room:testing:$roomVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-guava:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    testImplementation "androidx.room:room-testing:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
 
     // Coroutines
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
 
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation 'com.squareup.okio:okio:1.14.0'
-    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.squareup.okio:okio:1.16.0'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
-    implementation 'com.bignerdranch.android:simple-item-decoration:1.0.0'
-
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test:rules:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
