--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.21'
     repositories {
         google()
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.owasp:dependency-check-gradle:4.0.0'
     }
@@ -25,9 +25,9 @@ allprojects {
 }
 
 ext {
-    jetpackVersion = "1.0.0"
-    archComponentsVersion = "1.1.1"
-    roomVersion = '2.0.0'
+    jetpackVersion = '1.0.0'
+    archComponentsVersion = '2.1.0-alpha04'
+    roomVersion = '2.1.0-alpha06'
     coroutines = '1.1.0'
-    workManager = "1.0.0"
+    workManager = '2.0.0'
 }
