Add config for API key to alternate path
Add build key to release path

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'FONO_API_KEY', project.hasProperty('fono.apikey') ? '\"' + project.property('fono.apikey') + '\"' : '\"\"'
         }
     }
     compileOptions {
