Implement Custom Night Mode
Final changes to add a Night mode...implements the material colors correctly throughout the app, implement the additional night mode color resources, cleanup all old unused colors, and finally adjust vectors to use a material style color.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ app/release/output.json
 .gradle/buildOutputCleanup/cache.properties
 .gradle/buildOutputCleanup/cache.properties
 .gradle/buildOutputCleanup/cache.properties
+.cache/ktlint
