--- a/build.gradle
+++ b/build.gradle
@@ -33,15 +33,16 @@ allprojects {
 }
 
 ext {
-    appcompat = '1.1.0-beta01'
-    archComponentsVersion = '2.1.0-alpha04'
-    corektx = '1.0.1'
+    appcompat = '1.1.0-rc01'
+    archComponentsVersion = '2.2.0-alpha02'
+    corektx = '1.2.0-alpha02'
     coroutines = '1.1.0'
     glide = '4.9.0'
     jetpackVersion = '1.0.0'
-    mdc = '1.1.0-alpha07'
+    recycler = '1.1.0-beta01'
+    mdc = '1.1.0-alpha08'
     multidex = '2.0.1'
-    roomVersion = '2.1.0-alpha06'
+    roomVersion = '2.2.0-alpha01'
     vectordrawable = '1.0.1'
     workManager = '2.0.0'
 
