Remove detekt rule for Newline
It didn't work, so removing it.

--- a/default-detekt-config.yml
+++ b/default-detekt-config.yml
@@ -15,6 +15,7 @@ test-pattern: # Configure exclusions for test sources
   - 'WildcardImport'
   - 'MagicNumber'
   - 'MaxLineLength'
+  - 'NewLineAtEndOfFile'
   - 'LateinitUsage'
   - 'StringLiteralDuplication'
   - 'SpreadOperator'
