Add kapt flags to use worker and be incremental

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,10 @@ org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
 
+# Kapt
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+
 # If you would like to access the FONO API, you will need to have a key here
 # otherwise, leave this NA and the app will degrade gracefully
 # Get an API Key here: https://fonoapi.freshpixl.com/
