--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.useAndroidX=true
 # If you would like to access the FONO API, you will need to have a key here
 # otherwise, leave this NA and the app will degrade gracefully
 # Get an API Key here: https://fonoapi.freshpixl.com/
-fono.apikey=NA
+fono.apikey=3564b7c851660d0155a011884aad146f3248cabe271d0aa3
