--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.5.31'
     repositories {
         google()
-        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -28,22 +27,24 @@ allprojects {
     repositories {
         maven { url 'https://jitpack.io' }
         google()
-        jcenter()
     }
 }
 
 ext {
-    appcompat = '1.1.0-rc01'
-    archComponentsVersion = '2.2.0-alpha02'
-    corektx = '1.2.0-alpha02'
+    appcompat = '1.4.0'
+    archComponentsVersion = '2.2.0'
+    archComponentsVersionJava8 = '2.4.0'
+    constraintLayout = '2.1.2'
+    corektx = '1.7.0'
     coroutines = '1.1.0'
     glide = '4.9.0'
     jetpackVersion = '1.0.0'
-    recycler = '1.1.0-beta01'
-    mdc = '1.1.0-alpha08'
+    recycler = '1.2.1'
+    mdc = '1.4.0'
     multidex = '2.0.1'
-    roomVersion = '2.2.0-alpha01'
-    vectordrawable = '1.0.1'
-    workManager = '2.0.0'
+    palette = '1.0.0'
+    roomVersion = '2.3.0'
+    vectordrawable = '1.1.0'
+    workManager = '2.7.1'
 
 }
